# SignalForge

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_amdc.py  setup.py  show_latest.py  streamlit_app.py  success_criteria.md
.github/workflows/: ci.yml
scripts/: probe_sites.py  validate_sites.py
src/amdc/: config.py  crawler.py  extract.py  main.py  store.py
src/amdc_lake/: __init__.py  bronze.py  cli.py  constants.py  embedder.py  ids.py  observability.py  paths.py  silver.py
src/amdc_lake/quality/: __init__.py  checks.py  metrics.py  quarantine.py  runner.py  schemas.py
tests/: test_cli.py  test_crawler.py  test_extract.py  test_lakehouse_pipeline.py  test_main.py  test_quality.py  test_run_amdc.py  test_store.py
