[project]
name = "amdc"
version = "0.1.0"
description = "Adaptive Market Data Crawler"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.4",
    "deltalake>=0.25",
    "pandera[polars]>=0.22",
    "polars>=1.0",
    "pyarrow>=17",
    "safetensors>=0.4",
    "streamlit>=1.36",
    "torch>=2.4,<3; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers>=4.44,<5",
    "typer>=0.12",
]

[project.scripts]
amdc = "amdc.main:app"
amdc-lake = "amdc_lake.cli:app"

[dependency-groups]
test = [
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amdc", "src/amdc_lake"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
